--- a/ReTek_CarMechanical/Views/WorksheetView.xaml
+++ b/ReTek_CarMechanical/Views/WorksheetView.xaml
@@ -4,81 +4,107 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReTek_CarMechanical.Views"
+        xmlns:local1="clr-namespace:ReTek_CarMechanical.Helpers"
         mc:Ignorable="d"
         Title="Munkalap generálása" Height="630" Width="400" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
-   <Grid>
-      <StackPanel>
-         <Label Margin="5" Content="Válassza ki a gépjármű tulajdonosát" ></Label>
-         <ComboBox Margin="5" ItemsSource="{Binding Clients}" SelectedItem="{Binding SelectedClient, UpdateSourceTrigger=PropertyChanged}">
-            <ComboBox.ItemTemplate>
-               <DataTemplate>
-                  <TextBlock>
-                     <TextBlock.Text>
-                        <MultiBinding StringFormat="{}{0} {1}">
-                           <Binding Path="LastName" />
-                           <Binding Path="FirstName" />
-                        </MultiBinding>
-                     </TextBlock.Text>
-                  </TextBlock>
-               </DataTemplate>
-            </ComboBox.ItemTemplate>
-         </ComboBox>
-         <Label Margin="5" Content="Válassza ki a gépjárművet"></Label>
-         <ComboBox  Margin="5" ItemsSource="{Binding Cars}" SelectedItem="{Binding SelectedCar, UpdateSourceTrigger=PropertyChanged}">
-            <ComboBox.ItemTemplate>
-               <DataTemplate>
-                  <TextBlock>
-                     <TextBlock.Text>
-                        <MultiBinding StringFormat="{}{0} - {1}">
-                           <Binding Path="CarPlateNumber" />
-                           <Binding Path="CarVIN" />
-                        </MultiBinding>
-                     </TextBlock.Text>
-                  </TextBlock>
-               </DataTemplate>
-            </ComboBox.ItemTemplate>
-         </ComboBox>
-         <Label Margin="5" Content="Munka kezdetének ideje"/>
-         <DatePicker Margin="5" SelectedDate="{Binding WorkStart, UpdateSourceTrigger=PropertyChanged}" ></DatePicker>
-         <Label Margin="5" Content="Munka várható befejezésének ideje"/>
-         <DatePicker Margin="5" SelectedDate="{Binding ExpectedEnd, UpdateSourceTrigger=PropertyChanged}" ></DatePicker>
-         <Label Margin="5" Content="Munka tényleges befejezésének ideje"/>
-         <DatePicker Margin="5" SelectedDate="{Binding WorkActualEnd, UpdateSourceTrigger=PropertyChanged}" ></DatePicker>
-         <Label Margin="5" Content="Gépjármű aktuális KM óra állása"/>
-         <TextBox Margin="5" Text="{Binding KilometerState}"></TextBox>
-         <Label Margin="5" Content="Válassza ki az elvégzendő szolgáltatást"></Label>
-         <ComboBox Margin="5" ItemsSource="{Binding Services}" SelectedItem="{Binding SelectedService, UpdateSourceTrigger=PropertyChanged}">
-            <ComboBox.ItemTemplate>
-               <DataTemplate>
-                  <TextBlock>
-                     <TextBlock.Text>
-                        <MultiBinding StringFormat="{}{0} szolgáltatás Ára: {1}FT">
-                           <Binding Path="ServiceName" />
-                           <Binding Path="ServicePrice" />
-                        </MultiBinding>
-                     </TextBlock.Text>
-                  </TextBlock>
-               </DataTemplate>
-            </ComboBox.ItemTemplate>
-         </ComboBox>
-         <Label Margin="5" Content="Válassza ki az igényelt alkatrészt"></Label>
-         <ComboBox  Margin="5" ItemsSource="{Binding Parts}" SelectedItem="{Binding SelectedPart, UpdateSourceTrigger=PropertyChanged}">
-            <ComboBox.ItemTemplate>
-               <DataTemplate>
-                  <TextBlock>
-                     <TextBlock.Text>
-                        <MultiBinding StringFormat="{}{0} nevű alkatrész Ára: {1}FT || Készleten: {2} darab">
-                           <Binding Path="PartName" />
-                           <Binding Path="Price" />
-                           <Binding Path="Quantity" />
-                        </MultiBinding>
-                     </TextBlock.Text>
-                  </TextBlock>
-               </DataTemplate>
-            </ComboBox.ItemTemplate>
-         </ComboBox>
+    <Grid>
+        <StackPanel>
+            <Label Margin="5" Content="Válassza ki a gépjármű tulajdonosát" ></Label>
+            <ComboBox Margin="5" ItemsSource="{Binding Clients}" SelectedItem="{Binding SelectedClient, UpdateSourceTrigger=PropertyChanged}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0} {1}">
+                                    <Binding Path="LastName" />
+                                    <Binding Path="FirstName" />
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Label Margin="5" Content="Válassza ki a gépjárművet"></Label>
+            <ComboBox  Margin="5" ItemsSource="{Binding Cars}" SelectedItem="{Binding SelectedCar, UpdateSourceTrigger=PropertyChanged}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0} - {1}">
+                                    <Binding Path="CarPlateNumber" />
+                                    <Binding Path="CarVIN" />
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Label Margin="5" Content="Munka kezdetének ideje"/>
+            <DatePicker Margin="5" SelectedDate="{Binding WorkStart, UpdateSourceTrigger=PropertyChanged}" ></DatePicker>
+            <Label Margin="5" Content="Munka várható befejezésének ideje"/>
+            <DatePicker Margin="5" SelectedDate="{Binding ExpectedEnd, UpdateSourceTrigger=PropertyChanged}" ></DatePicker>
+            <Label Margin="5" Content="Munka tényleges befejezésének ideje"/>
+            <DatePicker Margin="5" SelectedDate="{Binding WorkActualEnd, UpdateSourceTrigger=PropertyChanged}" ></DatePicker>
+            <Label Margin="5" Content="Gépjármű aktuális KM óra állása"/>
+            <TextBox Margin="5">
+                <TextBox.Style>
+                    <Style TargetType="{x:Type TextBox}">
+                        <Setter Property="Validation.ErrorTemplate">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <DockPanel LastChildFill="True">
+                                        <TextBlock  DockPanel.Dock="Bottom" Foreground="Red" FontSize="7pt" Text="{Binding ElementName=MyAdorner,Path=AdornedElement.(Validation.Errors)[0].ErrorContent}">
+                                        </TextBlock>
+                                        <Border  BorderBrush="Red" BorderThickness="2">
+                                            <AdornedElementPlaceholder Name="MyAdorner" />
+                                        </Border>
+                                    </DockPanel>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </TextBox.Style>
+                <TextBox.Text>
+                    <Binding Path="KilometerState" UpdateSourceTrigger="PropertyChanged">
+                        <Binding.ValidationRules>
+                            <local1:StringValidationRule  ErrorMessage="Kérem, adja meg numerikusan." />
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
+            <Label Margin="5" Content="Válassza ki az elvégzendő szolgáltatást"></Label>
+            <ComboBox Margin="5" ItemsSource="{Binding Services}" SelectedItem="{Binding SelectedService, UpdateSourceTrigger=PropertyChanged}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0} szolgáltatás Ára: {1}FT">
+                                    <Binding Path="ServiceName" />
+                                    <Binding Path="ServicePrice" />
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Label Margin="5" Content="Válassza ki az igényelt alkatrészt"></Label>
+            <ComboBox  Margin="5" ItemsSource="{Binding Parts}" SelectedItem="{Binding SelectedPart, UpdateSourceTrigger=PropertyChanged}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock>
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0} nevű alkatrész Ára: {1}FT || Készleten: {2} darab">
+                                    <Binding Path="PartName" />
+                                    <Binding Path="Price" />
+                                    <Binding Path="Quantity" />
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
             <Button Height="30" Margin="5" Content="Munkalap felvétele" Command="{Binding AddNewWorksheetCommandHandler}"></Button>
-      </StackPanel>
-   </Grid>
+        </StackPanel>
+    </Grid>
 
 </Window>
